# typed-agent-hooks

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: hookprobe.py
src/typed_agent_hooks/: __init__.py  __main__.py  cli.py  core.py  loader.py  registry.py
src/typed_agent_hooks/claude_code/: __init__.py  app.py  config.py  events.py  outputs.py
src/typed_agent_hooks/codex/: __init__.py  app.py  config.py  events.py  outputs.py
src/typed_agent_hooks/commands/: __init__.py  hookset.py  runtime.py  scaffold.py
src/typed_agent_hooks/fastmcp/: __init__.py  bridge.py  rendezvous.py  shim.py  wire.py
src/typed_agent_hooks/hooksets/: __init__.py  check.py  compiler.py  forward.py  install.py  mapping.py  models.py
src/typed_agent_hooks/shared/: __init__.py  adapters.py  app.py  claude_code_outputs.py  codex_outputs.py  events.py  outputs.py  results.py
tests/: test_fastmcp_bridge.py  test_fastmcp_hookset.py  test_fastmcp_rendezvous.py  test_fastmcp_shim.py  test_fastmcp_wire.py  test_forward.py  test_hookset_lifecycle.py  test_provider_schemas.py  test_shared_mode.py
tests/fixtures/: claude_code_inputs.json  codex_inputs.json
